--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -91,37 +91,56 @@ b {
 }
 
 nav {
-  display: inline-block;
-  width: 100%;
-  margin-top: 50px;
+  .logo {
+    max-width: 100px;
+    margin: 0 auto;
+  }
   ul {
+    margin: 0 auto;
+    display: flex;
+    flex: 1 1;
+    justify-content: center;
     li {
-      display: inline-block;
+      padding: 1rem 0;
+      margin: 1rem 3rem;
       a {
         color: $black;
+      }
+    }
+  }
+  @include lg {
+    display: inline-block;
+    width: 100%;
+    margin-top: 50px;
+    ul {
+      li {
+        display: inline-block;
         padding: 20px 0;
         margin: 0 20px;
-        &:hover {
-          color: $blue;
-          border-bottom: 1px solid black;
+        a {
+          color: $black;
+          &:hover {
+            color: $blue;
+            border-bottom: 1px solid black;
+          }
         }
       }
+    }
+
+    .logo {
+      max-width: 70px;
+      float: left;
+    }
+
+    .socials {
+      float: right;
+      padding-right: 20px;
     }
   }
 }
 
 .ut-content {
   margin-top: 130px;
-}
-
-.logo {
-  max-width: 70px;
-  float: left;
-}
-
-.socials {
-  float: right;
-  padding-right: 20px;
 }
 
 h1 {
@@ -135,7 +154,10 @@ h1 {
   h1 {
     font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
       'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 3em;
+    font-size: 2.7em;
+    @include lg {
+      font-size: 3em;
+    }
   }
 
   b {
@@ -144,17 +166,24 @@ h1 {
   }
 }
 
+.skills {
+  line-height: 2.3;
+}
+
 span[class^='highlight'] {
   padding: 5px;
   margin-left: 5px;
 }
 
 .highlight {
-  background: rgb(0, 255, 208);
+  background: rgb(254, 240, 168);
 }
 
 .highlight-2 {
   background: rgb(235, 235, 235);
+}
+.highlight-3 {
+  background: rgb(255, 167, 215);
 }
 
 .portfolio-home {
