--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -26,8 +26,7 @@ a {
 }
 
 b {
-  font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $bold;
 }
 
 ul {
@@ -66,8 +65,7 @@ p {
 }
 
 h3 {
-  font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $bold;
   font-size: 1.5em;
   padding: 20px 0;
   margin-top: 20px;
@@ -82,8 +80,7 @@ h5 {
   font-size: 1 em;
   padding: 10px 0;
   font-weight: 700;
-  font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $bold;
 }
 
 b {
@@ -145,15 +142,13 @@ nav {
 
 h1 {
   font-size: 3em;
-  font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $bold;
 }
 
 .hero {
   padding: 50px 0;
   h1 {
-    font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-      'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: $bold;
     font-size: 2.7em;
     @include lg {
       font-size: 3em;
@@ -161,8 +156,7 @@ h1 {
   }
 
   b {
-    font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-      'Open Sans', 'Helvetica Neue', sans-serif;
+    font-family: $bold;
   }
 }
 
@@ -187,41 +181,66 @@ span[class^='highlight'] {
 }
 
 .portfolio-home {
-  margin-top: 140px;
+  @include lg {
+    margin-top: 140px;
+  }
 }
 
 .feature-portfolio {
-  margin: 100px 0;
-  img {
-    display: inline-block;
-    width: 60%;
-    -webkit-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
-    -moz-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
-    box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
+  a {
+    @include xs {
+      color: $grey;
+      padding: 10px;
+      float: right;
+      font-family: $bold;
+    }
+  }
+
+  @include xs {
+    margin-top: 10rem;
+  }
+  @include lg {
+    margin: 100px 0;
+    img {
+      display: inline-block;
+      width: 60%;
+      -webkit-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
+      -moz-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
+      box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
+    }
   }
 }
 
 .feature-portfolio-info {
-  float: right;
-  margin-right: 30px;
-  padding: 0 30px 0 0;
-  width: 29%;
+  @include lg {
+    float: right;
+    margin-right: 30px;
+    padding: 0 30px 0 0;
+    width: 29%;
+  }
+
   h2 {
-    font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-      'Open Sans', 'Helvetica Neue', sans-serif;
-    font-weight: 600;
-    font-size: 1.5em;
-    padding: 10px 0;
+    @include xs {
+      font-family: $bold;
+      font-size: 2em;
+      padding: 30px 0 10px 0;
+    }
+    @include lg {
+      font-family: $bold;
+      font-size: 1.5em;
+      padding: 10px 0;
+    }
   }
 
   p {
-    padding: 20px 0;
+    @include lg {
+      padding: 20px 0;
+    }
   }
 }
 
 .project-heading {
-  font-family: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: $bold;
   font-size: 2em;
   font-weight: 700;
   padding: 20px 0;
