--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,6 +3,9 @@ $white: #ffffff;
 $blue: #0068ff;
 $teal: #00ffdd;
 $grey: #5e5e5e;
+
+$bold: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+  'Helvetica Neue', sans-serif;
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
 
@@ -16,6 +19,12 @@ $screen-lg-min: 992px;
 $screen-xl-min: 1200px;
 
 // Small devices
+
+@mixin xs {
+  @media (max-width: #{$screen-sm-min}) {
+    @content;
+  }
+}
 @mixin sm {
   @media (min-width: #{$screen-sm-min}) {
     @content;
