--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -6,6 +6,7 @@
 body {
   font-family: 'Graphik-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
     'Open Sans', 'Helvetica Neue', sans-serif;
+  padding-bottom: 20px;
 }
 
 body::-webkit-scrollbar {
@@ -212,9 +213,6 @@ span[class^='highlight'] {
     img {
       display: inline-block;
       width: 60%;
-      -webkit-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
-      -moz-box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
-      box-shadow: 0px 0px 12px 0px rgba(50, 50, 50, 0.25);
     }
   }
 }
@@ -252,12 +250,6 @@ span[class^='highlight'] {
   font-size: 2em;
   font-weight: 700;
   padding: 20px 0;
-}
-
-.elevate-3 {
-  -webkit-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.36);
-  -moz-box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.36);
-  box-shadow: 0px 0px 16px 0px rgba(0, 0, 0, 0.36);
 }
 
 .border {
@@ -314,8 +306,18 @@ span[class^='highlight'] {
   padding-bottom: 50px;
 }
 
-.highlighted {
+.underlined {
   text-decoration: underline;
+}
+
+.bolded {
+  font-family: $bold;
+}
+
+.heading {
+  @include xs {
+    margin-top: 100px;
+  }
 }
 
 i {
@@ -363,27 +365,46 @@ ol {
   }
 }
 
-.abt section {
-  display: flex;
-  overflow-x: scroll;
-  &::-webkit-scrollbar {
-    display: none;
-  }
-}
-
 .about img {
-  margin-top: 30px;
+  border-radius: 20px;
 }
 
 .social {
   img {
     max-width: 30px;
-    margin-top: 0;
+    margin-top: 10px;
     margin-right: 20px;
     transition: 0.2s all ease-in-out;
     &:hover {
       transform: scale(1.1);
       opacity: 0.7;
     }
+  }
+}
+
+.tts-study {
+  i {
+    @include xs {
+      margin-top: 30px;
+    }
+  }
+}
+
+.experiment-card {
+  padding: 20px;
+  margin: 20px 0;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+
+  box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);
+  -webkit-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);
+  -moz-box-shadow: 0 1px 2px 0 rgba(0, 0, 0, .15);
+  transition: all .2s ease-in-out;
+  opacity: 0.9;
+  min-height: 500px;
+
+  h3 {
+    margin-top: 0;
   }
 }
