--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -1,11 +1,11 @@
 @import './reset.scss';
 @import './variables.scss';
 @import './grid.scss';
-@import url('https://fonts.googleapis.com/css?family=Work+Sans:400,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Rubik&display=swap');
 
 body {
-  font-family: 'Graphik-Regular', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: 'Rubik', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+    'Helvetica Neue', sans-serif;
   padding-bottom: 20px;
 }
 
@@ -382,14 +382,6 @@ ol {
   }
 }
 
-.tts-study {
-  i {
-    @include xs {
-      margin-top: 30px;
-    }
-  }
-}
-
 .experiment-card {
   padding: 20px;
   margin: 20px 0;
@@ -406,5 +398,18 @@ ol {
 
   h3 {
     margin-top: 0;
+  }
+}
+
+.mirror ol {
+  margin: 10px;
+  li {
+    margin: 5px 0;
+  }
+}
+
+.mirror {
+  p {
+    margin: 10px 0;
   }
 }
