--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -4,7 +4,7 @@ $blue: #0068ff;
 $teal: #00ffdd;
 $grey: #5e5e5e;
 
-$bold: 'graphik-Bold', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
+$bold: 'Poppins', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans',
   'Helvetica Neue', sans-serif;
 // Small tablets and large smartphones (landscape view)
 $screen-sm-min: 576px;
